# python-sandbox

./: .ruff.toml  LICENSE  README.md  codecompanion-workspace.json  compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: development-guidelines.instructions.md
docker/: Dockerfile
