[tool.poetry]
name = "pdf-bookmark-project"
version = "0.1.0"
description = "PDF bookmark management project"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pdf-yaml-bookmark = {git = "https://github.com/yutayamamoto/pdf-yaml-bookmark.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
